# pylgrim-evals

./: .gitignore  README.md
analysis/: append_e13_stage2.py  build_vague_prompts.py  (+6 more)
harness/: pyproject.toml
harness/src/harness/: __init__.py  arms.py  cli.py  coding_report.py  headless.py  judge.py  personas.py  provenance.py  queue.py  runner.py  schedule.py  skill_report.py  skill_runner.py  skilltasks.py  taskcards.py  transcripts.py  trigger_check.py  workspace.py
harness/src/harness/metrics/: __init__.py  drift_tokens.py  honeypots.py  scope.py  skill_checks.py  tests_outcome.py  tokens.py  violations.py
harness/src/harness/validators/: __init__.py  spec_v0.py  spec_v0_file.py
harness/tests/: conftest.py  test_arms.py  test_cli_partition.py  test_coding_report.py  test_headless.py  test_judge.py  test_metrics_drift_tokens.py  test_metrics_outcome.py  test_metrics_scope.py  test_metrics_tokens.py  test_metrics_violations.py  test_personas.py  test_provenance.py  test_queue.py  test_schedule.py  test_skill_checks.py  test_skill_report.py  test_skill_runner.py  test_skilltasks.py  test_taskcards.py  test_trigger_check.py  test_workspace_commit_capture.py  test_workspace_rmtree.py  test_zoo_builder.py
harness/tests/fixtures/: sample.diff  sample_transcript.jsonl  task_bad.yaml  task_good.yaml
harness/tests/fixtures/refuser-self-ratified-run/: result.json  turn-01.transcript.jsonl  turn-02.transcript.jsonl
harness/tests/fixtures/refuser-self-ratified-run/workspace/.pylgrim/work/: 01KWWRK7WNHRHYMZRKKXFDW9EF-add-webhook-notifications-invoice-paid.md
(+311 files in other folders)
