[project]
name = "pylgrim-harness"
version = "0.1.0"
description = "Evaluation harness for pylgrim: controlled experiments on AI coding agents via headless Claude Code runs."
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Analysis stack comes later (Wave 2+): mixed models, effect sizes, plots.
analysis = [
    "pandas",
    "scipy",
    "statsmodels",
]

[project.scripts]
harness = "harness.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/harness"]

[tool.pytest.ini_options]
testpaths = ["tests"]
